@@ -1,4 +1,6 @@
 DIST WebKit-r31224.tar.bz2 9163736 RMD160 73f85541b7d836b63441e104cecd3fe210d3e7b8 SHA1 b531fc0648f05682fb32161592e8e35dbefb942d SHA256 2a167669717512295c04dd79d449d9d9141d281c0caa697f05f1a0603bdcea30
+DIST WebKit-r31275.tar.bz2 9242779 RMD160 f624c0ceb87f41cdd98d52c6bd69eb3880878285 SHA1 075aacd13bcfa2e9863d648dcf9abf020cc0ef93 SHA256 a7360cd37c3ea8552466ae2f6562a4b905a3c88fa25d9f0d6ef83b419ae17ad1
 EBUILD webkitgtk-31224.ebuild 1126 RMD160 6284934a12a930d97be894f6e7de6e4e8382f990 SHA1 50bc1b9c107dad93d2435c223e86e7b45eb938cc SHA256 e9986e305f043067e09a81be9a490fa22a8d07fd64803a1ce63da17a5b1c13ba
-MISC ChangeLog 1336 RMD160 679036fcb996ddc1da8bf7833a9315b2a6508586 SHA1 a0de714d32ab38518e02b9c0637ede955af13a51 SHA256 5a39f4e740ca705be5cb52bcc462ec976dedb6ece0cf1aa60323f2aac9e4a14b
+EBUILD webkitgtk-31275.ebuild 1126 RMD160 6284934a12a930d97be894f6e7de6e4e8382f990 SHA1 50bc1b9c107dad93d2435c223e86e7b45eb938cc SHA256 e9986e305f043067e09a81be9a490fa22a8d07fd64803a1ce63da17a5b1c13ba
+MISC ChangeLog 1457 RMD160 e5eeb4f596e8c5b2c4a152db453ced309f75d8e7 SHA1 6363245b61f0142362d62654f83903b376bbf0ad SHA256 45cecba73c2c8c4f6dcee12d6cec0dbfd1463c52029a31e832e4b71290f38ede
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
